# pdf_extractor

./: .gitignore  README.md  pdf_extractor_config.json  pyproject.toml  requirements.txt  temp.py  temp.spec  third_iteration.py
