[project]
name = "pdf-scanner"
version = "0.1.1"
description = "Single/Multi PDF Parser for data extraction to text and/or CSV."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "customtkinter>=5.2.2",
    "frontend>=0.0.3",
    "pyinstaller>=6.13.0",
    "pymupdf>=1.25.5",
    "pyqt5>=5.15.11",
    "tools>=0.1.9",
]
